<resources>
    <string name="app_name">FilteringPlurk</string>

    <!-- String for Authorization Page -->
    <string name="title_authorization">Request Authorize</string>

    <!-- Strings for User profile  -->
    <string name="title_user_profile">User Profile</string>
    <string name="avatar_description">User Avatar</string>
    <string name="item_name">Name</string>
    <string name="item_value">Value</string>
    <string name="name_display_name">Display Name</string>
    <string name="name_nickname">Nickname</string>
    <string name="name_full_name">Full Name</string>
    <string name="name_birthday">Birthday</string>
    <string name="name_location">Location</string>
    <string name="name_gender">Gender</string>
    <string name="name_karma">Karma</string>
    <string name="name_plurk_count">Plurk Count</string>
    <string name="name_response_count">Response Count</string>
    <string name="name_friend_count">Friend Count</string>
    <string name="name_fans_count">Fans Count</string>
    <string name="name_invited_count">Invite Friend count</string>
    <string name="name_profile_view">Profile Views</string>
    <string name="name_about">About Me</string>

    <!-- Strings for Plurk List-->
    <string name="title_plurks">Plurks</string>
    <string name="item_count">Count</string>
    <string name="item_content">Content</string>

    <!-- Strings for Edit Plurk-->
    <string name="title_create_plurk">Say Something&#8230;</string>
    <string name="title_edit_plurk">Edit&#8230;</string>
    <string name="btn_plurk">Plurk!</string>
    <string-array name="plurk_verbs">
        <item>:</item>
        <item>freestyle</item>
        <item>says</item>
        <item>is</item>
        <item>likes</item>
        <item>sells</item>
        <item>thinks</item>
        <item>needs</item>
        <item>draws</item>
        <item>asks</item>
        <item>writes</item>
        <item>shares</item>
        <item>buys</item>
        <item>has</item>
        <item>was</item>
        <item>hates</item>
        <item>gives</item>
        <item>wants</item>
        <item>feels</item>
        <item>wishes</item>
        <item>hopes</item>
        <item>plays</item>
        <item>eats</item>
        <item>will</item>
        <item>loves</item>
        <item>wonders</item>
    </string-array>

    <!-- Strings for Plurk Detail-->
    <string name="title_plurk_detail">Plurk Detail</string>
    <string name="item_verb">Verb</string>
    <string name="btn_response">Response!</string>
    <string-array name="detail_functions">
        <item>Action&#8230;</item>
        <item>Edit</item>
        <item>Like</item>
        <item>Delete</item>
        <item>Share</item>
        <item>Bookmark</item>
        <item>Top</item>
        <item>Copy Link</item>
        <item>Copy Content</item>
    </string-array>
</resources>
